--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -35,6 +35,7 @@
   <body class="works_on_smartphone">
     <header>
       <ul>
+        <li class="logo">&#9733;</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
@@ -46,8 +47,8 @@
         <h1>I am Anwar Koji</h1>
         <p>This is a basic webpage created using HTML.</p>
         <p>I used simple and basic html structure to create this webpage.</p>
-        <p>To begin with we are going to learn how to add images onto our webpage</p>
-        <p>Let's add our Academy, ALX logo</p>
+        <p>To begin with we are going to learn how to add images onto our webpage.</p>
+        <p>Let's add our Academy, ALX logo.</p>
 
 
         <figure>
@@ -93,7 +94,7 @@
       </aside>
     </main>
     <footer>
-      <p>Made by Anwar Mohammed - <a href="https://www.linkedin.com/in/anwarkoji4u/" target='_blank'>here</a></p>
+      <p>Copyright &copy; Made by Anwar Mohammed - <a href="https://www.linkedin.com/in/anwarkoji4u/" target='_blank'>here</a></p>
     </footer>
   </body>
 </html>
