--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -12,6 +12,7 @@
   <body>
     <header>
       <ul>
+        <li class="logo">&#9733;</li> 
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
@@ -31,7 +32,7 @@
       </aside>
     </main>
     <footer>
-      <p>Made by Anwar Mohammed - <a href="https://www.linkedin.com/in/anwarkoji4u/" target='_blank'>here</a></p>
+      <p>Copyright&copy; Made by Anwar Mohammed - <a href="https://www.linkedin.com/in/anwarkoji4u/" target='_blank'>here</a></p>
     </footer>
   </body>
 </html>
