--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -6,6 +6,7 @@
     <title>
       Home
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="0-styles.css">
     <link rel="stylesheet" href="reset.css">
     <link href="1-index.html">
@@ -43,7 +44,7 @@
           <a href="#" class="fa-brands fa-twitter"></a>
           <a href="#" class="fa-brands fa-instagram"></a>
         </div>
-        <p>&copy;headphones 2020</p>
+        <p style="margin-bottom: 100px; text-align: center;">&copy;headphones 2020</p>
       </section>
     </footer>  
   </body>
